--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,9 @@
 	justify-content: space-around;
 	-ms-align-items: center;
 	align-items: center;
+	z-index: 2;
 }
+
 .splash-menu > div:first-of-type{
 	width: 100%;
 }
@@ -37,4 +39,5 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	z-index: 0;
 }
